log
sá., 12 de mar. de 2022 15:05:21: 
 tests:  0|7
total_score: 0/70
bf2a297
sá., 12 de mar. de 2022 15:16:11: 
 exercises.c | 38 +++++++++++++++++++++++++-------------
 1 file changed, 25 insertions(+), 13 deletions(-)
 tests:  1|6
total_score: 10/70
58982e0
sá., 12 de mar. de 2022 15:39:32: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
5a04f67
sá., 12 de mar. de 2022 15:40:06: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
9dd96d9
sá., 12 de mar. de 2022 16:05:12: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:74:30: error: expected expression before ')' token
    for (int cont = 0 ; cont <)
                              ^
Compilation failed
9bb1295
sá., 12 de mar. de 2022 16:07:09: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|4
total_score: 30/70
6542fa0
sá., 12 de mar. de 2022 16:12:37: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
4c55470
sá., 12 de mar. de 2022 16:13:47: 
 exercises.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  3|4
total_score: 30/70
fac5675
sá., 12 de mar. de 2022 16:17:11: 
 exercises.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|3
total_score: 40/70
0115581
